Bug 349139 - Crash on CSVImport window close if CSVWizard window is gone
Summary: Crash on CSVImport window close if CSVWizard window is gone
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 4.7.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-14 10:31 UTC by Jakub Grandys
Modified: 2018-03-28 08:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Start page of CSV Wizard which is reacting on escape key. (54.89 KB, image/png)
2015-06-14 10:32 UTC, Jakub Grandys
Details
Partially closed CSV Wizard window after pressing escape (30.41 KB, image/png)
2015-06-14 10:33 UTC, Jakub Grandys
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Grandys 2015-06-14 10:31:18 UTC
I'm having odd behavior when using CSV import resulting in a kmymoney crash. User is able to close the CSV Wizard window by pressing escape key without closing CSV Import window. As a result, when finally closing CSV Import window, application is crashing.

Moreover a user is able to partially close CSV Wizard dialog (see attached bug_csv_wizard_start_after_pressing_escape.png)

Unfortunately I'm on Archlinux so unable to attach proper backtrace, sorry! Let me know if you have trouble reproducing it I will try to compile with debug symbols.

Reproducible: Always

Steps to Reproduce:
1. Start CSV Import plugin
2. On main window (see attached bug_csv_wizard_start.png) press "escape" key
3. Part of window is lost (this probably is also a bug) - see attached bug_csv_wizard_start_after_pressing_escape.png
5. Pressing escape again, will not do anything to window.
5. Now switch focus to any other window, and go back to CSV Wizard window and press "escape" key again
6. CSV Wizard window is gone, switch to CSV Import window and close it
7. Crash

Actual Results:  
Kmymoney has crashed.

Expected Results:  
CSV Wizard windows should ignore escape key and shouldn't allow user to "partialy" close widget. When closing CSV Wizard window, CSV Import windows should also close.

On the other hand, CSV Import windows probably shouldn't be even visible on the start "page" of wizard - it is useless and contains only acres of white empty space.

Vanilla Archlinux packages for KDE4 and Kmymoney
Comment 1 Jakub Grandys 2015-06-14 10:32:20 UTC
Created attachment 93166 [details]
Start page of CSV Wizard which is reacting on escape key.
Comment 2 Jakub Grandys 2015-06-14 10:33:06 UTC
Created attachment 93167 [details]
Partially closed CSV Wizard window after pressing escape
Comment 3 wojnilowicz 2016-06-05 14:01:32 UTC
I can reproduce this bug, so confirming.
Comment 4 wojnilowicz 2016-09-10 16:19:19 UTC
Git commit c0073108f83af30218a05a568c74c5efac20728e by Łukasz Wojniłowicz.
Committed on 10/09/2016 at 16:18.
Pushed by wojnilowicz into branch 'master'.

Handle CSV Importer exits the right way

1) restore eventFilter only this time it's working right,
2) after pressing cancel button, CSV Wizard should close without any
save,
3) CSV Wizard window should be modal and closed before main window.

REVIEW:128876
FIXED-IN:5.0

M  +23   -9    kmymoney/plugins/csvimport/csvwizard.cpp
M  +9    -8    kmymoney/plugins/csvimport/csvwizard.h
M  +7    -1    kmymoney/plugins/csvimport/csvwizard.ui

http://commits.kde.org/kmymoney/c0073108f83af30218a05a568c74c5efac20728e