Handle CSV Importer exits the right way

1) restore eventFilter only this time it's working right,
2) after pressing cancel button, CSV Wizard should close without any
save,
3) CSV Wizard window should be modal and closed before main window.

REVIEW:128876
BUG:349139
FIXED-IN:5.0